--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ngx-admin",
+  "name": "Jason's-Amy",
   "version": "3.2.1",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akveo/ngx-admin.git"
+    "url": "git+git@github.com:jasonlee529/room-spider-front.git"
   },
   "bugs": {
-    "url": "https://github.com/akveo/ngx-admin/issues"
+    "url": "https://github.com/jasonlee529/room-spider-front/issues"
   },
   "browserslist": [
     "> 1%",
