--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "gulp": "^4.0.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
@@ -84,8 +85,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.12.1",
-    "@angular/compiler-cli": "^7.2.11",
     "@angular/cli": "^7.3.7",
+    "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "7.2.11",
     "@compodoc/compodoc": "1.0.1",
     "@fortawesome/fontawesome-free": "^5.2.0",
@@ -97,6 +98,7 @@
     "@types/node": "6.0.90",
     "codelyzer": "^4.5.0",
     "conventional-changelog-cli": "1.3.4",
+    "gulp-rsync": "0.0.8",
     "husky": "0.13.3",
     "jasmine-core": "2.6.4",
     "jasmine-spec-reporter": "4.1.1",
